--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,21 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.7'
-    testCompile 'junit:junit:4.11'
+    compile 'info.cukes:cucumber-groovy:1.2.0'
+    compile 'junit:junit:4.11'
+    compile 'org.apache.commons:commons-io:1.3.2'
+    compile 'org.codehaus.gpars:gpars:1.2.1'
+}
+
+task listJars << {
+    configurations.compile.each { File file -> println file.name }
+}
+
+task cucumber << {
+    String cp = ''
+    configurations.compile.each { cp += "${it}:" }
+    cp += './calculator.jar'
+    def cmdLine = "java -cp $cp cucumber.api.cli.Main --glue classpath:org.dustinl --plugin pretty " +
+            "classpath:features/plus.feature"
+    println cmdLine
 }
