--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'groovy'
-apply plugin:'application'
 
 version = '1.0'
 description = 'cucumber-jvm parallel runner'
@@ -21,6 +20,9 @@ sourceSets {
     main {
         compileClasspath += configurations.provided
         runtimeClasspath += configurations.provided
+        groovy {
+            exclude 'org/dustinl/cucumber/cucumberParallelJvm.groovy'
+        }
     }
     test {
         compileClasspath += configurations.provided
@@ -32,29 +34,10 @@ dependencies {
     provided "org.codehaus.groovy:groovy-all:${groovyVersion}"
     compile 'info.cukes:cucumber-groovy:1.2.0'
     compile 'org.apache.commons:commons-io:1.3.2'
-    compile 'org.codehaus.gpars:gpars:1.2.1'
-    compile "org.apache.ivy:ivy:2.3.0"
     groovy "org.apache.ivy:ivy:2.3.0"
     testCompile 'junit:junit:4.11'
 }
 
-tasks.withType(GroovyCompile) {
-    groovyClasspath += configurations.groovy
+clean {
+    delete 'target'
 }
-
-task listJars << {
-    configurations.compile.each { File file -> println file }
-}
-
-task testGroovy(type:Exec) {
-    ignoreExitValue=true
-    def path = compileGroovy.groovyClasspath + configurations.testCompile + files(sourceSets.main.output.classesDir)
-    commandLine 'groovy', '-cp', path.join(':'), 'src/test/groovy/org/dustinl/cucumber/PluginTest.groovy'
-}
-
-//task test(overwrite:true, dependsOn:['testGroovy'])
-
-task list << {
-    println sourceSets.main.output.classesDir
-}
-
