cucumberParallelJvm-7 unit test done

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     testCompile 'junit:junit:4.11'
 }
 
+test {
+    testLogging { exceptionFormat "full" }
+}
+
+
 clean {
     delete 'target'
 }
