--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ ext {
 }
 
 configurations {
-    groovy
     provided
 }
 
@@ -31,15 +30,26 @@ sourceSets {
 }
 
 dependencies {
-    provided "org.codehaus.groovy:groovy-all:${groovyVersion}"
     compile 'info.cukes:cucumber-groovy:1.2.0'
     compile 'org.apache.commons:commons-io:1.3.2'
-    groovy "org.apache.ivy:ivy:2.3.0"
     testCompile 'junit:junit:4.11'
+    provided "org.codehaus.groovy:groovy-all:${groovyVersion}"
 }
 
 test {
     testLogging { exceptionFormat "full" }
+}
+
+task processScript(type: Copy) {
+    from('src/main/script/')
+    from('src/main/groovy/')
+    into("${buildDir}/script")
+}
+
+task testScript(type:Exec, dependsOn:'processScript')  {
+    commandLine "$buildDir/script/cucumberParallelJvm", '--plugin', 'pretty', '--plugin', 'json:target/cucumber.json',
+    '--glue',  'src/main/groovy', '--thread', '4', '-d', 'src'
+    println commandLine
 }
 
 
